correct alignment

--- a/styles.scss
+++ b/styles.scss
@@ -138,7 +138,7 @@ a {
   @include flex();
   @include logo-font();
   padding: 10px 20px;
-  letter-spacing: 1px;
+  letter-spacing: normal;
   justify-content: center;
   border: none;
   outline:none;
@@ -520,14 +520,20 @@ textarea {
 .underline:hover {
   text-decoration: underline;
 }
-
+.profile-pic {
+  display: none;
+}
 @media (max-width:500px) {
+  .button {
+    letter-spacing: normal;
+  }
   .start-header {
     display: none;
   }
   .container {
     padding: 0 20px;
     justify-content: center;
+    align-items: center;
   }
   .header .container {justify-content: space-between}
   .main {
